tests/should_succeed/mc91.coma
module M_mc91
  use creusot.int.UInt32
  use creusot.prelude.Any
  use int.Int
  
  predicate gt_log_u32 [@inline:trivial] (self: UInt32.t) (other: UInt32.t) = UInt32.lt other self
  
  meta "rewrite_def" predicate gt_log_u32
  
  let mc91 (x: UInt32.t) (return (x'0: UInt32.t)) = any
    [ return (result: UInt32.t) -> {[@stop_split] [@expl:mc91 ensures] UInt32.le x (100: UInt32.t)
      -> UInt32.t'int result = 91 /\ gt_log_u32 x (100: UInt32.t) -> UInt32.t'int result = UInt32.t'int x - 10}
      (! return {result}) ]
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let mc91'0 (x: UInt32.t) (return (x'0: UInt32.t)) = (! bb0
    [ bb0 = s0
      [ s0 = [ &_4 <- UInt32.gt x (100: UInt32.t) ] s1
      | s1 = any [ br0 -> {_4 = false} (! bb2) | br1 -> {_4} (! bb1) ] ]
    | bb1 = s0 [ s0 = UInt32.sub {x} {(10: UInt32.t)} (fun (_x: UInt32.t) -> [ &_ret <- _x ] s1) | s1 = return {_ret} ]
    | bb2 = s0
      [ s0 = UInt32.add {x} {(11: UInt32.t)} (fun (_x: UInt32.t) -> [ &_8 <- _x ] s1)
      | s1 = mc91 {_8} (fun (_x: UInt32.t) -> [ &_7 <- _x ] s2)
      | s2 = mc91 {_7} (fun (_x: UInt32.t) -> [ &_ret <- _x ] s3)
      | s3 = return {_ret} ] ]
    [ & _ret: UInt32.t = Any.any_l ()
    | & x: UInt32.t = x
    | & _4: bool = Any.any_l ()
    | & _7: UInt32.t = Any.any_l ()
    | & _8: UInt32.t = Any.any_l () ])
    [ return (result: UInt32.t) -> {[@stop_split] [@expl:mc91 ensures] UInt32.le x (100: UInt32.t)
      -> UInt32.t'int result = 91 /\ gt_log_u32 x (100: UInt32.t) -> UInt32.t'int result = UInt32.t'int x - 10}
      (! return {result}) ]
end
