tests/should_fail/terminates/incorrect_variant.coma
module M_incorrect_loop_variant
  use creusot.int.Int32
  use creusot.prelude.Bool
  use creusot.prelude.Any
  
  predicate gt_log_i32 [@inline:trivial] (self: Int32.t) (other: Int32.t) = Int32.lt other self
  
  meta "rewrite_def" predicate gt_log_i32
  
  predicate well_founded_relation_i32 [@inline:trivial] (self: Int32.t) (other: Int32.t) = gt_log_i32 self other
  
  meta "rewrite_def" predicate well_founded_relation_i32
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let incorrect_loop_variant (x: Int32.t) (return (x'0: ())) = (! bb0
    [ bb0 = bb0invariant
      [ bb0 = {[@expl:loop variant] well_founded_relation_i32 variant_old_bb1 x} bb0invariant
      | bb0invariant = (! [ &variant_old_bb1 <- x ] s0
        [ s0 = [ &_6 <- Int32.ge x (-10: Int32.t) ] s1
        | s1 = any [ br0 -> {_6 = false} (! bb12) | br1 -> {_6} (! bb3) ] ])
        [ bb3 = s0
          [ s0 = [ &_8 <- Int32.le x (10: Int32.t) ] s1
          | s1 = any [ br0 -> {_8 = false} (! bb12) | br1 -> {_8} (! bb4) ] ]
        | bb4 = s0
          [ s0 = [ &_12 <- x ] s1
          | s1 = [ &_13 <- (2: Int32.t) = (0: Int32.t) ] s2
          | s2 = {[@expl:remainder by zero] not _13} s3
          | s3 = [ &_14 <- (2: Int32.t) = (-1: Int32.t) ] s4
          | s4 = [ &_15 <- _12 = (-2147483648: Int32.t) ] s5
          | s5 = [ &_16 <- Bool.bw_and _14 _15 ] s6
          | s6 = {[@expl:Rem overflow] not _16} s7
          | s7 = Int32.rem {_12} {(2: Int32.t)} (fun (_x: Int32.t) -> [ &_11 <- _x ] s8)
          | s8 = [ &_10 <- _11 = (0: Int32.t) ] s9
          | s9 = any [ br0 -> {_10 = false} (! bb8) | br1 -> {_10} (! bb7) ] ]
        | bb7 = s0 [ s0 = Int32.add {x} {(1: Int32.t)} (fun (_x: Int32.t) -> [ &x <- _x ] s1) | s1 = bb0 ]
        | bb8 = s0 [ s0 = Int32.sub {x} {(1: Int32.t)} (fun (_x: Int32.t) -> [ &x <- _x ] s1) | s1 = bb0 ] ] ]
    | bb12 = return {_ret} ]
    [ & _ret: () = Any.any_l ()
    | & x: Int32.t = x
    | & _6: bool = Any.any_l ()
    | & _8: bool = Any.any_l ()
    | & _10: bool = Any.any_l ()
    | & _11: Int32.t = Any.any_l ()
    | & _12: Int32.t = Any.any_l ()
    | & _13: bool = Any.any_l ()
    | & _14: bool = Any.any_l ()
    | & _15: bool = Any.any_l ()
    | & _16: bool = Any.any_l ()
    | & variant_old_bb1: Int32.t = Any.any_l () ]) [ return (result: ()) -> (! return {result}) ]
end
module M_incorrect_recursion
  use creusot.int.Int32
  use creusot.prelude.Bool
  use creusot.prelude.Any
  
  let incorrect_recursion (x: Int32.t) (return (x'0: ())) = any [ return (result: ()) -> (! return {result}) ]
  
  predicate gt_log_i32 [@inline:trivial] (self: Int32.t) (other: Int32.t) = Int32.lt other self
  
  meta "rewrite_def" predicate gt_log_i32
  
  predicate well_founded_relation_i32 [@inline:trivial] (self: Int32.t) (other: Int32.t) = gt_log_i32 self other
  
  meta "rewrite_def" predicate well_founded_relation_i32
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let incorrect_recursion'0 (x: Int32.t) (return (x'0: ())) = (! bb0
    [ bb0 = s0
      [ s0 = [ &_4 <- Int32.lt x (-10: Int32.t) ] s1 | s1 = any [ br0 -> {_4 = false} (! bb2) | br1 -> {_4} (! bb13) ] ]
    | bb2 = s0
      [ s0 = [ &_6 <- Int32.gt x (10: Int32.t) ] s1 | s1 = any [ br0 -> {_6 = false} (! bb5) | br1 -> {_6} (! bb13) ] ]
    | bb13 = return {_ret}
    | bb5 = s0
      [ s0 = [ &_10 <- x ] s1
      | s1 = [ &_11 <- (2: Int32.t) = (0: Int32.t) ] s2
      | s2 = {[@expl:remainder by zero] not _11} s3
      | s3 = [ &_12 <- (2: Int32.t) = (-1: Int32.t) ] s4
      | s4 = [ &_13 <- _10 = (-2147483648: Int32.t) ] s5
      | s5 = [ &_14 <- Bool.bw_and _12 _13 ] s6
      | s6 = {[@expl:Rem overflow] not _14} s7
      | s7 = Int32.rem {_10} {(2: Int32.t)} (fun (_x: Int32.t) -> [ &_9 <- _x ] s8)
      | s8 = [ &_8 <- _9 = (0: Int32.t) ] s9
      | s9 = any [ br0 -> {_8 = false} (! bb10) | br1 -> {_8} (! bb8) ] ]
    | bb8 = s0
      [ s0 = Int32.add {x} {(1: Int32.t)} (fun (_x: Int32.t) -> [ &_15 <- _x ] s1)
      | s1 = incorrect_recursion {_15} (fun (_x: ()) -> [ &_ret <- _x ] s2)
      | s2 = return {_ret} ]
    | bb10 = s0
      [ s0 = Int32.sub {x} {(1: Int32.t)} (fun (_x: Int32.t) -> [ &_17 <- _x ] s1)
      | s1 = incorrect_recursion {_17} (fun (_x: ()) -> [ &_ret <- _x ] s2)
      | s2 = return {_ret} ] ]
    [ & _ret: () = Any.any_l ()
    | & x: Int32.t = x
    | & _4: bool = Any.any_l ()
    | & _6: bool = Any.any_l ()
    | & _8: bool = Any.any_l ()
    | & _9: Int32.t = Any.any_l ()
    | & _10: Int32.t = Any.any_l ()
    | & _11: bool = Any.any_l ()
    | & _12: bool = Any.any_l ()
    | & _13: bool = Any.any_l ()
    | & _14: bool = Any.any_l ()
    | & _15: Int32.t = Any.any_l ()
    | & _17: Int32.t = Any.any_l () ]
    [ incorrect_recursion (x: Int32.t) (_k (_ret: ())) ->
    {[@expl:function variant] well_founded_relation_i32 function_variant x}
      incorrect_recursion {x} (_k) ] [ function_variant: Int32.t = x ]) [ return (result: ()) -> (! return {result}) ]
end
module M_incorrect_recursion_logic
  use int.ComputerDivision
  use int.Int
  
  predicate ge_log_Int [@inline:trivial] (self: int) (other: int) = other <= self
  
  meta "rewrite_def" predicate ge_log_Int
  
  predicate gt_log_Int [@inline:trivial] (self: int) (other: int) = other < self
  
  meta "rewrite_def" predicate gt_log_Int
  
  predicate well_founded_relation_Int [@inline:trivial] (self: int) (other: int) =
    ge_log_Int self 0 /\ gt_log_Int self other
  
  meta "rewrite_def" predicate well_founded_relation_Int
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  constant x : int
  
  function incorrect_recursion (x: int) : int
  
  goal vc_incorrect_recursion: if x = 0 then
      [@stop_split] [@expl:incorrect_recursion_logic ensures] 0 = 0
    else
      if ComputerDivision.mod x 2 = 0 then
        ([@expl:variant decreases] well_founded_relation_Int x (x + 1))
        /\ (([@stop_split] [@expl:incorrect_recursion_logic ensures] incorrect_recursion (x + 1) = 0)
        -> ([@stop_split] [@expl:incorrect_recursion_logic ensures] incorrect_recursion (x + 1) = 0))
      else
        ([@expl:variant decreases] well_founded_relation_Int x (x - 1))
        /\ (([@stop_split] [@expl:incorrect_recursion_logic ensures] incorrect_recursion (x - 1) = 0)
        -> ([@stop_split] [@expl:incorrect_recursion_logic ensures] incorrect_recursion (x - 1) = 0))
    

end
